# babababa

./: Makefile  VD_even.py  VD_game.py  game.py  main.py  pyproject.toml  pyproject.toml\
VD_games/: VD_main.py  engine.py
VD_games/scripts/: VD_calc.py  VD_even.py  VD_gcd.py  vd_prime.py  vd_progression.py
VD_games_old/: VD_game.py  cli.py  pyproject.toml
VD_games_old/scripts/: VD_games.py7yy
