[project]
name = "babababa"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[project.scripts]
VD_even = "VD_games.scripts.VD_even:main"
VD_calc = "VD_games.scripts.VD_calc:play_calc"
VD_gcd = "VD_games.scripts.VD_gcd:main"
