[project]
name = "babababa"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[project.scripts]
VD_games = "VD_games.VD_main:main"
VD_even = "VD_games.scripts.VD_even:main"
VD_calc = "VD_games.scripts.VD_calc:main"
VD_gcd = "VD_games.scripts.VD_gcd:main"
VD-progression = "VD_games.scripts.vd_progression:main"
VD-prime = "VD_games.scripts.vd_prime:main"
